static/style.css
@font-face {
  font-family: TCM;
  src: url("/static/TCM.TTF");
}

body {
  background-image: url("/static/background.png");
  background-color: rgb(255, 233, 243);
  color: rgb(68, 0, 68);
  font-family: TCM;
}

h1 {
  font-size: 80px;
  font-weight: bold;
  text-align: center;
}

.row {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
}

.row img {
  margin: 10px;
  width: 10%;
}

#form {
  display: block;
  margin: 30px auto 30px auto;
  width: 50%;
  background-color: transparent;
  border-style: dashed;
  border-color: rgb(95, 0, 107);
  border-width: 3px;
  border-radius: 5px;
}

#form button {
  color: rgb(68, 0, 68);
  font-size: xx-large;
}

#form .dz-preview.dz-image-preview {
  background-color: transparent;
}

#cats .cat .canvas-container {
  margin: auto;
}

#cats .cat button {
  display: block;
  height: 50px;
  margin: auto;
  border: none;
  background: pink;
  color: rgb(68, 0, 68);
  font-size: 36px;
  font-family: TCM;
  cursor: pointer;
}

